Added code for running spacy training data

--- a/notebooks/ac4119/03-svm-model.ipynb
+++ b/notebooks/ac4119/03-svm-model.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -180,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tfidf_X_train = load_obj('ac4119_tfidf_X_train_set_1')\n",
@@ -640,6 +642,166 @@
     "\n",
     "sns.lineplot(x='C', y='test_auc', hue='kernel', palette = purples , data = svm_pd  )\\\n",
     ".set_title('Model AUC by \\nC & kernel')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_path = '../../data/processed/dev/ac4119_train_set_0_w_tokens.csv'\n",
+    "dev_path = '../../data/processed/dev/ac4119_dev_w_tokens.csv'\n",
+    "\n",
+    "train = pd.read_csv(train_path)\n",
+    "dev = pd.read_csv(dev_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from ast import literal_eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train['token_review'] = train['token_review'].apply(lambda x: literal_eval(x))\n",
+    "dev['token_review'] = dev['token_review'].apply(lambda x: literal_eval(x))\n",
+    "\n",
+    "Y_train = train['label']\n",
+    "Y_dev = dev['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['special', 'soups', 'cold', 'day']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "literal_eval(train['token_review'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def identity_tokenizer(tokens):\n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer( tokenizer=identity_tokenizer, stop_words='english', lowercase=False, binary=True, min_df=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chuamelia/anaconda/envs/py35/lib/python3.6/site-packages/sklearn/feature_extraction/text.py:300: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['b', 'c', 'd', 'e', 'f', 'g', 'h', 'k', 'l', 'm', 'n', 'o', 'p', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y'] not in stop_words.\n",
+      "  'stop_words.' % sorted(inconsistent))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time: 1.7679816307500005\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Timer()\n",
+    "t.start()\n",
+    "tfidf_vectorizer = TfidfVectorizer( tokenizer=identity_tokenizer, stop_words='english', lowercase=False, binary=True, min_df=5)\n",
+    "tfidf_vectorizer.fit(train['token_review'])\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf_X_train = tfidf_vectorizer.transform(train['token_review'])\n",
+    "tfidf_X_dev = tfidf_vectorizer.transform(dev['token_review'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "k = 'poly'\n",
+    "c = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = Timer()\n",
+    "t.start()\n",
+    "params = {'kernel':k,'C':c, 'gamma':'scale', 'random_state': 519}\n",
+    "fitted_model = fitted_svm(params, tfidf_X_train ,Y_train )\n",
+    "metrics = ClassifierMetrics(tfidf_X_train, Y_train, tfidf_X_dev, Y_dev, fitted_model)\n",
+    "elapsed = t.stop()\n",
+    "print('Elapsed time:',elapsed)"
    ]
   },
   {
