revised typo in eval metrics

--- a/notebooks/ac4119/99-evaluation-metrics-assembly-template.ipynb
+++ b/notebooks/ac4119/99-evaluation-metrics-assembly-template.ipynb
@@ -26,10 +26,13 @@
     "    fitted_model: \n",
     "    \"\"\"\n",
     "    Y_pred = fitted_model.predict(X_test)\n",
+    "    Y_score = fitted_model.decision_function(X_test)\n",
     "    metrics = {'train_accuracy': fitted_model.score(X_train, Y_train),\n",
     "               'test_accuracy': fitted_model.score(X_test, Y_test),\n",
-    "               'test_auc': roc_auc_score(Y_test, Y_pred),\n",
-    "               'test_ap': average_precision_score(Y_test, Y_pred)}\n",
+    "               'test_auc_pred': roc_auc_score(Y_test, Y_pred),\n",
+    "               'test_auc_score': roc_auc_score(Y_test, Y_score),\n",
+    "               'test_ap_pred': average_precision_score(Y_test, Y_pred),\n",
+    "               'test_ap_score': average_precision_score(Y_test, Y_score)}\n",
     "    return metrics"
    ]
   },
