--- a/notebooks/ac4119/99-evaluation-metrics-assembly-template.ipynb
+++ b/notebooks/ac4119/99-evaluation-metrics-assembly-template.ipynb
@@ -149,7 +149,7 @@
    "outputs": [],
    "source": [
     "# Run this cell, if this is the first time.\n",
-    "# all_attempts = {}"
+    "# all_attempts = []"
    ]
   },
   {
@@ -163,7 +163,7 @@
     "for (params, fitted_model) in list_of_params_and_fitted_models:\n",
     "    metrics = ClassifierMetrics (X_train, Y_train, X_test, Y_test, fitted_model)\n",
     "    model_attempt_details = {'params': params, 'metrics': metrics}\n",
-    "    all_attempts.update(model_attempt_details)\n",
+    "    all_attempts.append(model_attempt_details)\n",
     "\n",
     "# File name of the model attempts/results\n",
     "fname = 'all_attempts_{yourNetId}'\n",
