best scores? not sure what I've uploaded...

--- a/notebooks/ac4119/01-data-preprocessing-Copy1.ipynb
+++ b/notebooks/ac4119/01-data-preprocessing-Copy1.ipynb
@@ -86,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "training_sets = []\n",
@@ -235,10 +237,23 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_set['token_review'] = train_set['review'].map(lambda x: clean_tokens(word_tokenize(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train.head(5)"
    ]
   },
   {
@@ -302,7 +317,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Out of the top 100 words for both real and fake reviews {} overlapped\".format(len(top_overlapping_words)))"
@@ -355,6 +372,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf_X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {
     "collapsed": true
@@ -367,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
