--- a/notebooks/ac4119/03-linearsvm-model.ipynb
+++ b/notebooks/ac4119/03-linearsvm-model.ipynb
@@ -6027,6 +6027,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully written to l1_attempts_ac4119_20200516\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname = 'l1_attempts_ac4119_20200516'\n",
+    "writeJsonFile(fname, dual_attempts)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
