update template to include predict_prob

--- a/notebooks/ac4119/04-analysis-results.ipynb
+++ b/notebooks/ac4119/04-analysis-results.ipynb
@@ -4603,6 +4603,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "Hey guys, lmk if you guys think you are done with you implementations. One thing I don't think any of us have tried yet, it to incorporate the "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
