--- a/notebooks/ac4119/99-evaluation-metrics-assembly-template.ipynb
+++ b/notebooks/ac4119/99-evaluation-metrics-assembly-template.ipynb
@@ -26,7 +26,10 @@
     "    fitted_model: \n",
     "    \"\"\"\n",
     "    Y_pred = fitted_model.predict(X_test)\n",
-    "    Y_score = fitted_model.decision_function(X_test)\n",
+    "    # Y_score = fitted_model.decision_function(X_test)\n",
+    "    # If your classifier doesn't output decision_function, use predict_proba. \n",
+    "    # Make sure it is taking the prob of the '1' class\n",
+    "    Y_score = fitted_model.predict_proba(X_test)[:,1]\n",
     "    metrics = {'train_accuracy': fitted_model.score(X_train, Y_train),\n",
     "               'test_accuracy': fitted_model.score(X_test, Y_test),\n",
     "               'test_auc_pred': roc_auc_score(Y_test, Y_pred),\n",
@@ -198,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
