Added multi-feature pipeline

--- a/notebooks/ac4119/01-feature-transformation-old.ipynb
+++ b/notebooks/ac4119/01-feature-transformation-old.ipynb
@@ -29,6 +29,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_path = '../../data/raw/test_no_label.csv'\n",
+    "test = pd.read_csv(test_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -150,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -159,13 +171,107 @@
     "base = '/Users/chuamelia/Google Drive/Spring 2020/Machine Learning/fake-review-detection-project/data/processed/dev/'\n",
     "\n",
     "num_reviews_by_user = train.groupby(train['user_id'])['ex_id'].count().to_frame().reset_index()\n",
-    "num_reviews_by_user.columns = ['user_id', 'num_reviews']\n",
-    "num_reviews_by_user.to_csv(base + 'num_reviews_by_user_ac4119.csv', index=False, sep=',')"
+    "num_reviews_by_user.columns = ['user_id', 'train_num_reviews']\n",
+    "# num_reviews_by_user.to_csv(base + 'train_num_reviews_by_user_ac4119.csv', index=False, sep=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dev_num_reviews_by_user = validation.groupby(validation['user_id'])['ex_id'].count().to_frame().reset_index()\n",
+    "dev_num_reviews_by_user.columns = ['user_id', 'dev_num_reviews']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_num_reviews_by_user = test.groupby(test['user_id'])['ex_id'].count().to_frame().reset_index()\n",
+    "test_num_reviews_by_user.columns = ['user_id', 'test_num_reviews']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stg_user_lkp_1  = pd.merge(num_reviews_by_user, dev_num_reviews_by_user, on='user_id', how='outer')\n",
+    "stg_user_lkp_2 =  pd.merge(stg_user_lkp_1, test_num_reviews_by_user, on='user_id', how='outer').fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stg_user_lkp_2['cumulative_total_train_dev_reviews'] = stg_user_lkp_2['train_num_reviews'] +\\\n",
+    "stg_user_lkp_2['dev_num_reviews'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stg_user_lkp_2['cumulative_total_train_dev_test_reviews'] = stg_user_lkp_2['train_num_reviews'] +\\\n",
+    "stg_user_lkp_2['dev_num_reviews'] + stg_user_lkp_2['test_num_reviews']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "stg_user_lkp_2.to_csv(base + 'num_reviews_by_user.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_reviews_by_prod = train.groupby(train['prod_id'])['ex_id'].count().to_frame().reset_index()\n",
+    "num_reviews_by_prod.columns = ['prod_id', 'train_num_reviews']\n",
+    "\n",
+    "dev_num_reviews_by_prod = validation.groupby(validation['prod_id'])['ex_id'].count().to_frame().reset_index()\n",
+    "dev_num_reviews_by_prod.columns = ['prod_id', 'dev_num_reviews']\n",
+    "\n",
+    "test_num_reviews_by_prod = test.groupby(test['prod_id'])['ex_id'].count().to_frame().reset_index()\n",
+    "test_num_reviews_by_prod.columns = ['prod_id', 'test_num_reviews']\n",
+    "\n",
+    "stg_prod_lkp_1  = pd.merge(num_reviews_by_prod, dev_num_reviews_by_prod, on='prod_id', how='outer')\n",
+    "stg_prod_lkp_2 =  pd.merge(stg_prod_lkp_1, test_num_reviews_by_prod, on='prod_id', how='outer').fillna(0)\n",
+    "\n",
+    "stg_prod_lkp_2['cumulative_total_train_dev_reviews'] = stg_prod_lkp_2['train_num_reviews'] +\\\n",
+    "stg_prod_lkp_2['dev_num_reviews'] \n",
+    "\n",
+    "stg_prod_lkp_2['cumulative_total_train_dev_test_reviews'] = stg_prod_lkp_2['train_num_reviews'] +\\\n",
+    "stg_prod_lkp_2['dev_num_reviews'] + stg_prod_lkp_2['test_num_reviews']\n",
+    "\n",
+    "stg_prod_lkp_2.to_csv(base + 'num_reviews_by_prod.csv', index=False, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -189,95 +295,169 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>num_reviews</th>\n",
+       "      <th>prod_id</th>\n",
+       "      <th>train_num_reviews</th>\n",
+       "      <th>dev_num_reviews</th>\n",
+       "      <th>test_num_reviews</th>\n",
+       "      <th>cumulative_total_train_dev_reviews</th>\n",
+       "      <th>cumulative_total_train_dev_test_reviews</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>923</td>\n",
-       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>155</td>\n",
+       "      <td>18</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>173</td>\n",
+       "      <td>210.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>924</td>\n",
        "      <td>1</td>\n",
+       "      <td>191</td>\n",
+       "      <td>12</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>203</td>\n",
+       "      <td>253.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>925</td>\n",
        "      <td>2</td>\n",
+       "      <td>118</td>\n",
+       "      <td>21</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>139</td>\n",
+       "      <td>166.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>926</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>39</td>\n",
+       "      <td>6</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>59.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>927</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>374</td>\n",
+       "      <td>66</td>\n",
+       "      <td>107.0</td>\n",
+       "      <td>440</td>\n",
+       "      <td>547.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125674</th>\n",
-       "      <td>161142</td>\n",
-       "      <td>1</td>\n",
+       "      <th>918</th>\n",
+       "      <td>918</td>\n",
+       "      <td>278</td>\n",
+       "      <td>37</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>315</td>\n",
+       "      <td>389.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125675</th>\n",
-       "      <td>161143</td>\n",
-       "      <td>1</td>\n",
+       "      <th>919</th>\n",
+       "      <td>919</td>\n",
+       "      <td>322</td>\n",
+       "      <td>56</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>378</td>\n",
+       "      <td>486.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125676</th>\n",
-       "      <td>161144</td>\n",
-       "      <td>1</td>\n",
+       "      <th>920</th>\n",
+       "      <td>920</td>\n",
+       "      <td>218</td>\n",
+       "      <td>28</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>246</td>\n",
+       "      <td>306.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125677</th>\n",
-       "      <td>161145</td>\n",
-       "      <td>1</td>\n",
+       "      <th>921</th>\n",
+       "      <td>921</td>\n",
+       "      <td>138</td>\n",
+       "      <td>20</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>158</td>\n",
+       "      <td>192.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125678</th>\n",
-       "      <td>161147</td>\n",
-       "      <td>1</td>\n",
+       "      <th>922</th>\n",
+       "      <td>922</td>\n",
+       "      <td>575</td>\n",
+       "      <td>91</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>666</td>\n",
+       "      <td>824.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>125679 rows × 2 columns</p>\n",
+       "<p>923 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id  num_reviews\n",
-       "0           923           26\n",
-       "1           924            1\n",
-       "2           925            2\n",
-       "3           926            1\n",
-       "4           927            3\n",
-       "...         ...          ...\n",
-       "125674   161142            1\n",
-       "125675   161143            1\n",
-       "125676   161144            1\n",
-       "125677   161145            1\n",
-       "125678   161147            1\n",
+       "     prod_id  train_num_reviews  dev_num_reviews  test_num_reviews  \\\n",
+       "0          0                155               18              37.0   \n",
+       "1          1                191               12              50.0   \n",
+       "2          2                118               21              27.0   \n",
+       "3          3                 39                6              14.0   \n",
+       "4          4                374               66             107.0   \n",
+       "..       ...                ...              ...               ...   \n",
+       "918      918                278               37              74.0   \n",
+       "919      919                322               56             108.0   \n",
+       "920      920                218               28              60.0   \n",
+       "921      921                138               20              34.0   \n",
+       "922      922                575               91             158.0   \n",
        "\n",
-       "[125679 rows x 2 columns]"
+       "     cumulative_total_train_dev_reviews  \\\n",
+       "0                                   173   \n",
+       "1                                   203   \n",
+       "2                                   139   \n",
+       "3                                    45   \n",
+       "4                                   440   \n",
+       "..                                  ...   \n",
+       "918                                 315   \n",
+       "919                                 378   \n",
+       "920                                 246   \n",
+       "921                                 158   \n",
+       "922                                 666   \n",
+       "\n",
+       "     cumulative_total_train_dev_test_reviews  \n",
+       "0                                      210.0  \n",
+       "1                                      253.0  \n",
+       "2                                      166.0  \n",
+       "3                                       59.0  \n",
+       "4                                      547.0  \n",
+       "..                                       ...  \n",
+       "918                                    389.0  \n",
+       "919                                    486.0  \n",
+       "920                                    306.0  \n",
+       "921                                    192.0  \n",
+       "922                                    824.0  \n",
+       "\n",
+       "[923 rows x 6 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_reviews_by_user"
+    "stg_prod_lkp_2"
    ]
   },
   {
@@ -290,6 +470,15 @@
    "source": [
     "len(train['review'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
