another NN update boom
still not done. i need to figure out evaluation metric

--- a/notebooks/drh382/dee_KNN.ipynb
+++ b/notebooks/drh382/dee_KNN.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,12 +700,165 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[29347  2923]\n",
+      " [ 3246   402]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.91      0.90     32270\n",
+      "           1       0.12      0.11      0.12      3648\n",
+      "\n",
+      "    accuracy                           0.83     35918\n",
+      "   macro avg       0.51      0.51      0.51     35918\n",
+      "weighted avg       0.82      0.83      0.82     35918\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(Y_dev, y_new15_pred))\n",
+    "print(classification_report(Y_dev, y_new15_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=20, p=2,\n",
+       "                     weights='uniform')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier20 = KNeighborsClassifier(n_neighbors=20)\n",
+    "classifier20.fit(cnt_X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_new20_pred = classifier20.predict(cnt_X_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[30589  1681]\n",
+      " [ 3418   230]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.95      0.92     32270\n",
+      "           1       0.12      0.06      0.08      3648\n",
+      "\n",
+      "    accuracy                           0.86     35918\n",
+      "   macro avg       0.51      0.51      0.50     35918\n",
+      "weighted avg       0.82      0.86      0.84     35918\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(Y_dev, y_new20_pred))\n",
+    "print(classification_report(Y_dev, y_new20_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[28628  3642]\n",
+      " [ 3156   492]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.89      0.89     32270\n",
+      "           1       0.12      0.13      0.13      3648\n",
+      "\n",
+      "    accuracy                           0.81     35918\n",
+      "   macro avg       0.51      0.51      0.51     35918\n",
+      "weighted avg       0.82      0.81      0.82     35918\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifier11 = KNeighborsClassifier(n_neighbors=11)\n",
+    "classifier11.fit(cnt_X_train, Y_train)\n",
+    "y_new11_pred = classifier11.predict(cnt_X_dev)\n",
+    "print(confusion_matrix(Y_dev, y_new11_pred))\n",
+    "print(classification_report(Y_dev, y_new11_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[29022  3248]\n",
+      " [ 3203   445]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.90      0.90     32270\n",
+      "           1       0.12      0.12      0.12      3648\n",
+      "\n",
+      "    accuracy                           0.82     35918\n",
+      "   macro avg       0.51      0.51      0.51     35918\n",
+      "weighted avg       0.82      0.82      0.82     35918\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifier13 = KNeighborsClassifier(n_neighbors=13)\n",
+    "classifier13.fit(cnt_X_train, Y_train)\n",
+    "y_new13_pred = classifier13.predict(cnt_X_dev)\n",
+    "print(confusion_matrix(Y_dev, y_new13_pred))\n",
+    "print(classification_report(Y_dev, y_new13_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(confusion_matrix(Y_dev, y_new15_pred))\n",
-    "print(classification_report(Y_dev, y_new15_pred))"
+    "classifier14 = KNeighborsClassifier(n_neighbors=14)\n",
+    "classifier14.fit(cnt_X_train, Y_train)\n",
+    "y_new14_pred = classifier14.predict(cnt_X_dev)\n",
+    "print(confusion_matrix(Y_dev, y_new14_pred))\n",
+    "print(classification_report(Y_dev, y_new14_pred))"
    ]
   },
   {
