3rd update by dee(knn draft)

--- a/notebooks/drh382/dee_KNN.ipynb
+++ b/notebooks/drh382/dee_KNN.ipynb
@@ -850,9 +850,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[30212  2058]\n",
+      " [ 3349   299]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.94      0.92     32270\n",
+      "           1       0.13      0.08      0.10      3648\n",
+      "\n",
+      "    accuracy                           0.85     35918\n",
+      "   macro avg       0.51      0.51      0.51     35918\n",
+      "weighted avg       0.82      0.85      0.83     35918\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "classifier14 = KNeighborsClassifier(n_neighbors=14)\n",
     "classifier14.fit(cnt_X_train, Y_train)\n",
@@ -867,7 +885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#copied from am\n",
     "import json\n",
     "base = '../data/processed/dev/'\n",
     "def writeJsonFile(fname, data,  base=base):\n",
@@ -918,6 +936,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#copied from amelia\n",
     "k = kernels[0]\n",
     "print('Now trying: ' + k + ' kernels...')\n",
     "for c in cs[2:]:\n",
