--- a/notebooks/ece278/02_Model_NaiveBayes.ipynb
+++ b/notebooks/ece278/02_Model_NaiveBayes.ipynb
@@ -793,7 +793,7 @@
     "               'test_auc_score': roc_auc_score(Y_test, Y_score),\n",
     "               'test_ap_pred': average_precision_score(Y_test, Y_pred),\n",
     "               'test_ap_score': average_precision_score(Y_test, Y_score)}\n",
-    "    return metrics, Y_pred"
+    "    return metrics, Y_pred, Y_score"
    ]
   },
   {
@@ -802,8 +802,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bal_tfidf_metrics, bal_tfidf_pred = ClassifierMetrics (bal_tfidf_X_train, bal_Y_train, bal_tfidf_X_dev, bal_Y_dev, tfidf_nb)\n",
-    "bal_cnt_metrics, bal_cnt_pred = ClassifierMetrics (bal_cnt_X_train, bal_Y_train, bal_cnt_X_dev, bal_Y_dev, cnt_nb)\n"
+    "bal_tfidf_metrics, bal_tfidf_pred, bal_tfidf_proba = ClassifierMetrics (bal_tfidf_X_train, bal_Y_train, bal_tfidf_X_dev, bal_Y_dev, tfidf_nb)\n",
+    "bal_cnt_metrics, bal_cnt_pred, bal_cnt_proba = ClassifierMetrics (bal_cnt_X_train, bal_Y_train, bal_cnt_X_dev, bal_Y_dev, cnt_nb)\n"
    ]
   },
   {
@@ -978,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
